# birl_climbot_location

./: README.md
devel/: .catkin  local_setup.sh  setup.sh
devel/include/birl_module_robot/: inverse_solution.h  inverse_solutionRequest.h  inverse_solutionResponse.h  positive_solution.h  positive_solutionRequest.h  positive_solutionResponse.h
devel/include/ui/: robot_command.h  robot_feedback.h
devel/include/uwb_msg/: UWB.h
devel/lib/BIRL_UWB/: debug_node  locate_node  test_node  tracking_node
devel/lib/DeadReckoning/: DeadReckoning_node  data2tf_node
devel/lib/birl_module_robot/: inverse_solution_server  positive_solution_server
devel/lib/camera/: G0G6marker_from_aruco  camera_node  eye_hand_calibration_halcon  eye_hand_calibration_opencv  helper_ICP  pose_modifier
devel/lib/pkgconfig/: BIRL_UWB.pc  DeadReckoning.pc  birl_module_robot.pc  camera.pc  canopen_communication.pc  ui.pc  uwb_msg.pc  vrpn_client_ros.pc
devel/lib/vrpn_client_ros/: vrpn_client_node  vrpn_tracker_node
devel/share/BIRL_UWB/cmake/: BIRL_UWBConfig.cmake
devel/share/DeadReckoning/cmake/: DeadReckoningConfig.cmake
devel/share/birl_module_robot/cmake/: birl_module_robotConfig.cmake
devel/share/camera/cmake/: cameraConfig.cmake
devel/share/canopen_communication/cmake/: canopen_communicationConfig.cmake
devel/share/ui/cmake/: ui-msg-paths.cmake  uiConfig.cmake
devel/share/uwb_msg/cmake/: uwb_msg-msg-extras.cmake  uwb_msg-msg-paths.cmake  uwb_msgConfig.cmake
src/BIRL_UWB/: CMakeLists.txt
src/BIRL_UWB/config/: default.yaml  map.csv
src/BIRL_UWB/include/: BIRL_UWB.h  Command.h  LocationInfo.h  RangingInfo.h  usb.h
src/BIRL_UWB/launch/: ranging.launch  tracking.launch
src/BIRL_UWB/main/: main_debug.cpp  main_location.cpp  main_ranging.cpp  main_uwb_locating.cpp
src/BIRL_UWB/src/: BIRL_UWB.cpp  test_file.cpp  usb.cpp
src/DeadReckoning/: CMakeLists.txt
src/DeadReckoning/src/: DeadReckoning.cpp  Kine.cpp  main.cpp
src/DeadReckoning/test/: data2tf.cpp
src/IMU/devel/: .catkin
src/IMU/src/read_imu_data/: package.xml  (+1 more)
src/camera/: CMakeLists.txt
src/camera/helper/: README.md  marker_icp.cpp  pose_modifier.cpp
src/camera/include/: ClimberKinematics5D.h  ClimbotKinematics.h  Kine.h
src/camera/src/: ClimberKinematics5D.cpp  ClimbotKinematics.cpp
src/camera/test/: G0G6marker_from_aruco.cpp  eye_hand_calibration_halcon.cpp  eye_hand_calibration_opencv.cpp  main.cpp
src/uwb_msg/: CMakeLists.txt  package.xml
src/uwb_msg/msg/: UWB.msg
src/vrpn_client/launch/: sample.launch
(+45 files in other folders)
